Added icons to header

--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,48 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background: linear-gradient(to bottom right, #5C469C, 70%, #D4ADFC);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem;
+  font-size: 2rem;
+  font-family: sans-serif;
+}
+
+.agenda {
+  width: 50rem;
+  aspect-ratio: 1/1;
+  background: #eee;
+  border-radius: 2rem;
+}
+.agenda__header {
+  background: #E74646;
+  height: 20%;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.agenda__month {
+  height: 80%;
+  padding: 2rem;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 1rem;
+}
+.agenda__day {
+  background: #d5d5d5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+}
+
 /*# sourceMappingURL=style.css.map */
