--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,18 @@ body {
   border-top-right-radius: 2rem;
   border-top-left-radius: 2rem;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 2rem;
+}
+.agenda__button {
+  background: none;
+  border: none;
+  font-size: 200%;
+}
+.agenda__button:hover {
+  cursor: pointer;
 }
 .agenda__month {
   height: 80%;
@@ -49,9 +59,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80%;
   aspect-ratio: 1/1;
   border-radius: 50%;
+}
+.agenda__day:hover {
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
