--- a/scss/components/agenda/agenda.scss
+++ b/scss/components/agenda/agenda.scss
@@ -11,9 +11,19 @@
         height: 20%;
         border-top-right-radius: 2rem;
         border-top-left-radius: 2rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
+        @include mixins.flexCenter;
+        justify-content: space-between;
+        padding: 2rem;
+    }
+
+    &__button{
+        background: none;
+        border: none;
+        font-size: 200%;
+
+        &:hover{
+            cursor: pointer;
+        }
     }
 
     &__month{
@@ -28,9 +38,13 @@
     &__day{
         background: darken(#eee, 10%);
         @include mixins.flexCenter;
-        width: 100%;
+        width: 80%;
         aspect-ratio: 1/1;
         border-radius: 50%;
+
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
 
