--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ body {
   aspect-ratio: 1/1;
   background: #eee;
   border-radius: 2rem;
+  position: fixed;
+  right: 4rem;
+  bottom: 4rem;
 }
 .agenda__header {
   background: #E74646;
@@ -52,6 +55,7 @@ body {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(5fr);
   gap: 1rem;
 }
 .agenda__day {
@@ -65,6 +69,12 @@ body {
 }
 .agenda__day:hover {
   cursor: pointer;
+}
+
+@media screen and (max-width: 62.5rem) {
+  .agenda {
+    position: static;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
