--- a/scss/components/agenda/agenda.scss
+++ b/scss/components/agenda/agenda.scss
@@ -5,6 +5,9 @@
     aspect-ratio: 1/1;
     background: #eee;
     border-radius: 2rem;
+    position: fixed;
+    right: 4rem;
+    bottom: 4rem;
 
     &__header{
         background:#E74646;
@@ -32,6 +35,7 @@
         list-style: none;
         display: grid;
         grid-template-columns: repeat(7, 1fr);
+        grid-template-rows: repeat(5fr );
         gap: 1rem;
     }
 
@@ -47,4 +51,5 @@
         }
     }
 }
+
 
