--- a/yubtub/scr/scss/components/yubtub/yubtub.scss
+++ b/yubtub/scr/scss/components/yubtub/yubtub.scss
@@ -1,7 +1,8 @@
 @use "../../abstract/mixins";
 
 .yubtub{
-    @include mixins.flexCenter;
+    display: flex;
+    justify-content: flex-start;
     gap: 2rem;
     padding: 2rem 2rem;
     
@@ -89,7 +90,10 @@
         resize: none;
         font-size: 2rem;
         padding: 1rem 1rem;
-        vertical-align: start;
+
+        &::placeholder{
+            vertical-align: center;
+        }
     }
 
     // Aside
@@ -98,7 +102,7 @@
         flex: 1 1 0;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
         background: red;
     }
 }
