--- a/yubtub/style.css
+++ b/yubtub/style.css
@@ -28,8 +28,7 @@ body {
 
 .yubtub {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
   gap: 2rem;
   padding: 2rem 2rem;
 }
@@ -111,13 +110,15 @@ body {
   resize: none;
   font-size: 2rem;
   padding: 1rem 1rem;
-  vertical-align: start;
+}
+.yubtub__textarea::placeholder {
+  vertical-align: center;
 }
 .yubtub__aside {
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   background: red;
 }
 
