--- a/yubtub/scr/scss/style.scss
+++ b/yubtub/scr/scss/style.scss
@@ -2,3 +2,5 @@
 @use "./components/header/header.scss";
 @use "./components/yubtub/yubtub.scss";
 @use "./abstract/mixins";
+
+@use "./abstract/mediaqueries";
