--- a/yubtub/scr/scss/components/yubtub/yubtub.scss
+++ b/yubtub/scr/scss/components/yubtub/yubtub.scss
@@ -3,8 +3,10 @@
 .yubtub{
     display: flex;
     justify-content: flex-start;
+    margin:  0 auto;
     gap: 2rem;
     padding: 2rem 2rem;
+    max-width: 144rem;
     
     &__main{
         flex: 2.5 1 0;
@@ -27,18 +29,7 @@
         width: 100%;
     }
 
-    &__star{
-        position: absolute;
-        top: .5%;
-        left: -2%;
-        font-size: 4.5rem;
-        color: hsl(60, 95%, 50%);
-        
-
-        &:hover{
-            cursor: pointer;
-        }
-    }
+    
 
     &__group{
         @include mixins.flexCenter;
@@ -63,6 +54,33 @@
 
     &__icon{
         font-size: 4.5rem;
+
+        &--starTop{
+            position: absolute;
+            top: .5%;
+            left: -2%;
+            font-size: 4.5rem;
+            color: hsl(60, 95%, 50%);
+            
+    
+            &:hover{
+                cursor: pointer;
+            }
+        }
+
+        &--starBottom{
+            color: hsl(60, 95%, 50%);
+
+            &:hover{
+                cursor: pointer;
+            }
+        }
+
+        &--arrow{
+            &:hover{
+                cursor: pointer;
+            }
+        }
     }
 
     // Comments
@@ -103,7 +121,16 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        background: red;
+    }
+
+    &__nextVideo{
+        width: 25.7rem;
+        height: 14.5rem;
+        background: black;
+
+        &:hover{
+            cursor: pointer;
+        }
     }
 }
 
