--- a/yubtub/scr/scss/components/yubtub/yubtub.scss
+++ b/yubtub/scr/scss/components/yubtub/yubtub.scss
@@ -1,4 +1,5 @@
 @use "../../abstract/mixins";
+@use "../../abstract/vars";
 
 .yubtub{
     display: flex;
@@ -88,6 +89,39 @@
                 color: rgb(54, 91, 255);
             }
         }
+
+        &--circle{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: vars.$mainColor;
+            width: 5rem;
+            height: 5rem;
+            border-radius: 50%;
+            border: .4rem solid vars.$mainColor;
+            overflow: hidden;
+        }
+
+        &--commentCircle{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: vars.$mainColor;
+            width: 5rem;
+            height: 5rem;
+            border-radius: 50%;
+            border: .4rem solid vars.$mainColor;
+            overflow: hidden;
+        }
+
+        &--userVideo{
+            font-size: 4rem;
+            transform: translateY(5%);
+        }
+
+        &--user{
+            transform: translateY(5%);
+        }
     }
 
     // Comments
@@ -107,7 +141,7 @@
         list-style: none;
         width: 100%;
         height: 8rem;
-        border: .4rem solid black;
+        border: .4rem solid vars.$mainColor;
         padding: 0rem 2rem;
     }
 
@@ -137,6 +171,7 @@
 
         &:hover{
             cursor: pointer;
+            border: .3rem solid vars.$mainColor;
         }
     }
 }
