--- a/yubtub/style.css
+++ b/yubtub/style.css
@@ -110,6 +110,35 @@ body {
   cursor: pointer;
   color: rgb(54, 91, 255);
 }
+.yubtub__icon--circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #5c16c5;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: 0.4rem solid #5c16c5;
+  overflow: hidden;
+}
+.yubtub__icon--commentCircle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #5c16c5;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  border: 0.4rem solid #5c16c5;
+  overflow: hidden;
+}
+.yubtub__icon--userVideo {
+  font-size: 4rem;
+  transform: translateY(5%);
+}
+.yubtub__icon--user {
+  transform: translateY(5%);
+}
 .yubtub__comments {
   flex: 1 1 0;
   display: flex;
@@ -125,7 +154,7 @@ body {
   list-style: none;
   width: 100%;
   height: 8rem;
-  border: 0.4rem solid black;
+  border: 0.4rem solid #5c16c5;
   padding: 0rem 2rem;
 }
 .yubtub__textarea {
@@ -149,6 +178,7 @@ body {
 }
 .yubtub__nextVideo:hover {
   cursor: pointer;
+  border: 0.3rem solid #5c16c5;
 }
 
 @media screen and (max-width: 56.25rem) {
