--- a/yubtub/scr/scss/abstract/_mediaqueries.scss
+++ b/yubtub/scr/scss/abstract/_mediaqueries.scss
@@ -4,6 +4,12 @@
         flex-direction: column;
 
         &__aside{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            width: 100%;
+        }
+
+        &__nextVideo{
             margin: 0 auto;
         }
     }
@@ -21,6 +27,18 @@
             font-size: 1.6rem;
         }
     }
+}
+
+@media screen and (max-width: 42.85rem ){ // 600px
+    
+    .yubtub{
+        &__nextVideo{
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+        }
+    }
+    
 }
 
 @media screen and (max-width: 25rem ){ // 400px
