--- a/yubtub/style.css
+++ b/yubtub/style.css
@@ -40,9 +40,6 @@ body {
   display: flex;
   gap: 3rem;
 }
-.yubtub__section {
-  flex: 1 1 0;
-}
 .yubtub__figure {
   display: flex;
   justify-content: center;
@@ -104,11 +101,11 @@ body {
 .yubtub__icon--arrow {
   color: transparent;
   -webkit-text-stroke-width: 0.4rem;
-  -webkit-text-stroke-color: rgb(54, 91, 255);
+  -webkit-text-stroke-color: #5c16c5;
 }
 .yubtub__icon--arrow:hover {
   cursor: pointer;
-  color: rgb(54, 91, 255);
+  color: #5c16c5;
 }
 .yubtub__icon--circle {
   display: flex;
